tests/custom-resolver-restart/custom-resolver-restart.exp
Error ------------------------------------------------------------------------------------------------- hello.foo.js:3:9

Cannot resolve module `world`.

   3| require('world');
              ^^^^^^^


Error ------------------------------------------------------------------------------------------------- world.foo.js:3:9

Cannot resolve module `hello`.

   3| require('hello');
              ^^^^^^^



Found 2 errors
No errors!
